--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -12,8 +12,8 @@
   "استكشف المناهج": "Explore Curriculum",
   "ما هي ؟": "What is it?",
       "مرحبًا بك في \"مدرسة وي للتكنولوجيا التطبيقية\"! مدرستنا هي مؤسسة رائدة متخصصة في تقديم تعليم متميز في مجالات البرمجة والاتصالات والشبكات. في \"وي للتكنولوجيا التطبيقية\"، نسعى لتمكين طلابنا بالمعرفة والمهارات اللازمة للتفوق في عالم التكنولوجيا سريع التطور.":
-    "Welcome to 'We School of Applied Technology'! Our school is a leading institution specialized in providing excellent education in the fields of programming, communications, and networks. At 'WY School of Applied Technology', we strive to empower our students with the knowledge and skills necessary to excel in the rapidly evolving world of technology."
-
+    "Welcome to 'We School of Applied Technology'! Our school is a leading institution specialized in providing excellent education in the fields of programming, communications, and networks. At 'WY School of Applied Technology', we strive to empower our students with the knowledge and skills necessary to excel in the rapidly evolving world of technology.",
+  "تغير اللغة":"Change Langauge"
   
   
   
