--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -152,8 +152,8 @@
   "شركاء المدرسة": "school_partners",
   "عرض المزيد": "Show More",
   "المطورون": "developers",
-  "كرم محمود": "karemMahmoud",
-  "مصطفى جمال": "mustafaGamal",
+  "كارم محمود": "karem Mahmoud",
+  "مصطفى جمال": "mustafa Gamal",
   "عنهم": "aboutThem"
   
 
