--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -174,8 +174,29 @@
 "الدرجة":"degree",
 "الدرجة النهائية":"final degree",
 "تقدير":"appreciation",
-"":""
-
+"لوحة التحكم":"Dashboard",
+"المنشورات":"Time line",
+"الاعدادات":"Settings",
+"تسجيل الخروج":"Log out",
+"تغير النصيحة":"Change Advice",
+"قائمة الانشطة":"TO DO LIST",
+"الدرجات":"Degrees"
+,"عام":"General",
+"الوضع الليلي":"Dark Mode",
+"اضافة":"add",
+"البريد الالكتروني":"email",
+"كلمة المرور":"password",
+"الاسم الاول":"frist name",
+"اسم العائلة":"last name",
+"اختر صفك":"select your grade",
+"اختر دورك":"select your role"
+,"انشاء حساب":"sign up"
+,"طالب":"Student",
+"معلم":"Teacher"
+,"الصف الاول":"Grade 1 (A)",
+"الصف الثاني":"Grade 2 (B)",
+"الصف الثالث":"Grade 3 (C)",
+"او تسجيل الدخول":"or login"
 
   
 
