--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -196,8 +196,15 @@
 ,"الصف الاول":"Grade 1 (A)",
 "الصف الثاني":"Grade 2 (B)",
 "الصف الثالث":"Grade 3 (C)",
-"او تسجيل الدخول":"or login"
-
+"او تسجيل الدخول":"or login",
+"مرحبا":"welcome",
+"بك في مدرسة وي":"to we cshool",
+"يمكنك التحميل بالضغط على تحميل واختيار الملف الخاص بك. كن حذرًا عند اختيار ملف. استمتع بوقتك!":"You can upload by clicking on Upload and choose your file. Be careful when selecting a file. Have a nice time!",
+"المؤسسة":"Branch",
+"الطلاب":"Students",
+"المعلمون":"Teachers",
+"المسؤولون":"Admins",
+"":""
   
 
 
