--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -204,7 +204,21 @@
 "الطلاب":"Students",
 "المعلمون":"Teachers",
 "المسؤولون":"Admins",
-"":""
+"قم بتحميل مهمتك":"Upload Your Task",
+"ما عليك سوى النقر على زر التحميل واسحب ملفك":"Simply click the upload button and drag your file",
+"بتحميل":"Upload",
+"هل انت متاكد من انك تريد ان تقوم بتقديم عام دراسي جديد ان قم بذلك سيتم ترقية الطلاب للصف المقبل":"Are you sure that you want to apply for a new academic year? If you do so, students will be promoted for the next year"
+,"السنة التالية":"Next Year",
+"تحميل ملف الدرجات":"Upload Degree files",
+"تحميل منشورك":"Upload Your Post",
+"خاص ب":"For",
+"الكود":"Code",
+"تغير":"Change",
+"تغير الكود":"Change Code"
+
+
+
+
   
 
 
