--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -41,7 +41,7 @@
   "- تتنوع تخصصات مدارس التكنولوجيا التطبيقية لتواكب احتياجات سوق العمل المتغيرة، وتهدف إلى تزويد الطلاب بالمهارات والمعرفة اللازمة للعمل في صناعات التكنولوجيا والابتكار.":
     "- Specializations in Applied Technology Schools vary to meet the changing needs of the job market, aiming to provide students with the skills and knowledge required to work in the fields of technology and innovation industries.",
     "ايه هي مدرسة WE للتكنولوجيا التطبيقية؟": "What is WE School of Applied Technology?",
-  "- هي أول مدرسة متخصصة في مجالي الاتصالات وتكنولوجيا المعلومات وهي عبارة عن شراكة بين وزارة الاتصالات وتكنولوجيا المعلومات MCIT وشركة المصرية للاتصالات Telecom Egypt ونظام التعليم فيها قائم على نظام الجدارات":
+    "- هي أول مدرسة متخصصة في مجالي الاتصالات وتكنولوجيا المعلومات وهي عبارة عن شراكة بين وزارة الاتصالات وتكنولوجيا المعلوماتMCIT وشركة المصرية للاتصالات Telecom Egypt ونظام التعليم فيها قائم على نظام الجدارات":
     "- WE School of Applied Technology is the first specialized school in the fields of communications and information technology. It's a partnership between the Ministry of Communications and Information Technology (MCIT) and Telecom Egypt. The school's educational system is based on the competency-based education approach.",
   "يعني إيه نظام الجدارات؟": "What does the competency-based education approach mean?",
   "- هو نظام للتعليم تم تطبيقه عشان نتأكد إن طالب WE يبقى فني محترف عنده العوامل الأساسية عشان يكون فني جدير متميز عن غيره ومحترف في مجال تخصصه وهي:":
@@ -207,7 +207,7 @@
 "قم بتحميل مهمتك":"Upload Your Task",
 "ما عليك سوى النقر على زر التحميل واسحب ملفك":"Simply click the upload button and drag your file",
 "بتحميل":"Upload",
-"هل انت متاكد من انك تريد ان تقوم بتقديم عام دراسي جديد ان قم بذلك سيتم ترقية الطلاب للصف المقبل":"Are you sure that you want to apply for a new academic year? If you do so, students will be promoted for the next year"
+"هل انت متاكد من انك تريد ان تقوم بتقديم عام دراسي جديد ان قم بذلك سيتم ترقية الطلاب للصف المقبل":"Are you sure that you want to apply for a new academic year? If you do so, students will be promoted for the next year and all posts will be deleted "
 ,"السنة التالية":"Next Year",
 "تحميل ملف الدرجات":"Upload Degree files",
 "تحميل منشورك":"Upload Your Post",
